Fixed wrapping issue in menu by setting min-width on #MainMenu to a higher number

--- a/WebContent/css/menu1.css
+++ b/WebContent/css/menu1.css
@@ -2,10 +2,12 @@
 /* Navigation */
 
 #MainMenu {
-	width:100%;
 	height:31px;
 	background: #FFFFFF url("../images/bmid_022.gif");
 	margin: 0 0px 40px 0;
+	min-width: 1175px;
+	max-width: 1400px;
+	
 	border:0;
 }
 #tab {
